--- a/.github/workflows/immpw.yml
+++ b/.github/workflows/immpw.yml
@@ -162,6 +162,7 @@ jobs:
       - name: 载入自定义配置
         run: |
           sed -i 's/\+dns2socks //g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/Makefile
+          sed -i "s/'redirect'/'tproxy'/g" package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
           sed -i '6s/1/0/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
           sed -i '8s/tcp/udp/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
           sed -i '9s/1.1.1.1/127.0.0.1:6553/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
